Backup/ambel.ca.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-frontend
  labels:
    app: main-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-frontend
  template:
    metadata:
      labels:
        app: main-frontend
    spec:
      containers:
      - name: main-frontend
        image: tazul96/ambel:PF-latest
        ports:
        - containerPort: 3000
      imagePullSecrets:
        - name: dockerhub-secret
---
apiVersion: v1
kind: Service
metadata:
  name: main-frontend
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: main-frontend
